[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/hyh.cutscene_graph/scripts/EditorRandomNode.gd" type="Script" id=1]
[ext_resource path="res://addons/hyh.cutscene_graph/icon_add.svg" type="Texture" id=2]
[ext_resource path="res://addons/hyh.cutscene_graph/scenes/RandomValue.tscn" type="PackedScene" id=3]

[node name="EditorRandomNode" type="GraphNode"]
margin_right = 500.0
margin_bottom = 164.0
title = "Random"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.94902, 0.27451, 0.478431, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.811765, 0.956863, 0.298039, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 0.811765, 0.956863, 0.298039, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color( 0.811765, 0.956863, 0.298039, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 484.0
margin_bottom = 68.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 458.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 416.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Default"

[node name="AddBranchButton" type="ToolButton" parent="MarginContainer/HBoxContainer"]
margin_left = 420.0
margin_right = 448.0
margin_bottom = 24.0
icon = ExtResource( 2 )

[node name="RandomValue" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 69.0
margin_right = 484.0
margin_bottom = 113.0

[node name="RandomValue2" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 114.0
margin_right = 484.0
margin_bottom = 158.0
[connection signal="pressed" from="MarginContainer/HBoxContainer/AddBranchButton" to="." method="_on_AddBranchButton_pressed"]
[connection signal="modified" from="RandomValue" to="." method="_value_modified" binds= [ 1 ]]
[connection signal="remove_requested" from="RandomValue" to="." method="_value_remove_requested" binds= [ 1 ]]
[connection signal="modified" from="RandomValue2" to="." method="_value_modified" binds= [ 2 ]]
[connection signal="remove_requested" from="RandomValue2" to="." method="_value_remove_requested" binds= [ 2 ]]
